@@ -10,18 +10,13 @@
  
 package org.badvision.outlaweditor.ui.impl;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import javafx.beans.value.ChangeListener;
-import javafx.beans.value.ObservableValue;
-import javafx.event.ActionEvent;
-import javafx.scene.control.ListView;
-import javafx.scene.image.ImageView;
-import javafx.scene.layout.FlowPane;
-import javafx.util.StringConverter;
+
 import org.badvision.outlaweditor.TileEditor;
 import org.badvision.outlaweditor.api.ApplicationState;
 import static org.badvision.outlaweditor.data.PropertyHelper.bind;
@@ -37,6 +32,14 @@ import org.badvision.outlaweditor.ui.TileEditorTabController;
 import org.badvision.outlaweditor.ui.UIAction;
 import static org.badvision.outlaweditor.ui.UIAction.confirm;
 
+import javafx.beans.value.ChangeListener;
+import javafx.beans.value.ObservableValue;
+import javafx.event.ActionEvent;
+import javafx.scene.control.ListView;
+import javafx.scene.image.ImageView;
+import javafx.scene.layout.FlowPane;
+import javafx.util.StringConverter;
+
 /**
  * FXML Controller class for tile editor tab
  *
@@ -44,7 +47,7 @@ import static org.badvision.outlaweditor.ui.UIAction.confirm;
  */
 public class TileEditorTabControllerImpl extends TileEditorTabController {
     FlowPane quickMenu = new FlowPane();
-    ChangeListener rebuildListener = (ObservableValue value, Object oldValue, Object newValue) -> rebuildTileSelectors();
+    ChangeListener<String> rebuildListener = (ObservableValue<? extends String> value, String oldValue, String newValue) -> rebuildTileSelectors();
 
     @Override
     public void onCurrentTileSelected(ActionEvent event) {
@@ -161,6 +164,9 @@ public class TileEditorTabControllerImpl extends TileEditorTabController {
         tileSelector.setConverter(new StringConverter<Tile>() {
             @Override
             public String toString(Tile object) {
+                if (object == null) {
+                    return "";
+                }
                 return String.valueOf(object.getCategory() + "/" + object.getName());
             }
 
@@ -230,12 +236,12 @@ public class TileEditorTabControllerImpl extends TileEditorTabController {
                 bind(tileSpriteField.selectedProperty(), boolProp(t, "sprite"));
                 bind(tileBlockerField.selectedProperty(), boolProp(t, "blocker"));
                 bind(tileNameField.textProperty(), stringProp(t, "name"));
-                TileEditor editor = ApplicationState.getInstance().getCurrentPlatform().tileEditor.newInstance();
+                TileEditor editor = ApplicationState.getInstance().getCurrentPlatform().tileEditor.getDeclaredConstructor().newInstance();
                 editor.setEntity(t);
                 setCurrentTileEditor(editor);
                 tileNameField.textProperty().addListener(rebuildListener);
                 tileCategoryField.textProperty().addListener(rebuildListener);
-            } catch (NoSuchMethodException ex) {
+            } catch (IllegalArgumentException | InvocationTargetException | SecurityException | NoSuchMethodException ex) {
                 Logger.getLogger(ApplicationUIController.class.getName()).log(Level.SEVERE, null, ex);
             } catch (InstantiationException | IllegalAccessException ex) {
                 Logger.getLogger(ApplicationUIControllerImpl.class.getName()).log(Level.SEVERE, null, ex);
